# DEEP_THINKER

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile.sandbox  Dockerfile.sandbox-browser  Dockerfile.sandbox-gpu  Dockerfile.sandbox-node  Dockerfile.sandbox-trusted  README.md  build_sandbox.sh  main.py  pyproject.toml  requirements.txt
api/: README.md  __init__.py  server.py  sse.py
api/routes/: __init__.py  agents.py  config.py  gpu.py  missions.py  workflows.py
deepthinker/: __init__.py
deepthinker/agents/: README.md  __init__.py
deepthinker/alignment/: README.md  __init__.py  config.py  controller.py  drift.py  evaluator.py  integration.py  learning.py  learning_config.py  models.py  persist.py
examples/: docker_executor_demo.py  iris_classification.csv  monitoring_demo.py  websearch_demo.py
frontend/: .gitignore  README.md  index.html  tailwind.config.js
scripts/: arxiv_fill_rag.py  ingest_behavioral.py  ingest_owid.py
tests/: __init__.py  conftest.py  test_alignment.py  test_api.py  test_arxiv.py  test_backward_compat.py  test_bandit.py  test_bio_priors.py  test_claim_graph.py  test_consensus.py  test_constitution_blinding.py  test_constitution_integration.py  test_constitution_invariants.py  test_constitution_ledger.py  test_constitution_no_regression.py  test_cost_time_predictor.py  test_epistemics.py  test_governance.py  test_hf_instruments.py  test_judge_ensemble.py  test_ml_router.py  test_model_caller.py  test_phase_contracts.py  test_scenarios.py  test_scorecard.py  test_security_scanner.py  test_sprint34_integration.py
(+423 files in other folders)
