[tool.poetry]
name = "deepthinker"
version = "0.1.0"
description = "Long-running multi-agent autonomous AI system using CrewAI and Ollama"
authors = ["Arthur Spriet"]
readme = "README.md"
packages = [{include = "deepthinker"}]

[tool.poetry.dependencies]
python = "^3.10"

# Core AI/ML frameworks
crewai = ">=0.1.0,<1.0.0"
crewai-tools = ">=0.1.0,<1.0.0"
ollama = ">=0.1.0,<1.0.0"
langchain = ">=0.1.0,<1.0.0"
langchain-community = ">=0.0.1,<1.0.0"
langchain-ollama = ">=0.3.0,<1.0.0"
litellm = ">=1.0.0,<2.0.0"

# Data processing
numpy = ">=1.24.0,<2.0.0"
pandas = ">=2.0.0,<3.0.0"
scikit-learn = ">=1.3.0,<2.0.0"

# CLI and utilities
click = ">=8.0.0,<9.0.0"
python-dotenv = ">=1.0.0,<2.0.0"

# Docker SDK for secure code execution
docker = ">=7.0.0,<8.0.0"

# Web search
ddgs = ">=9.0.0,<10.0.0"

# API Server
fastapi = ">=0.109.0,<1.0.0"
uvicorn = {version = ">=0.27.0,<1.0.0", extras = ["standard"]}
pydantic = ">=2.5.0,<3.0.0"

# HTTP client (for embeddings, model API)
requests = ">=2.28.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0,<9.0.0"
pytest-asyncio = ">=0.21.0,<1.0.0"
pytest-cov = ">=4.0.0,<6.0.0"
httpx = ">=0.24.0,<1.0.0"  # For testing FastAPI

[tool.poetry.scripts]
deepthinker = "main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
